Перенёс все из config.json переменные в .env файл

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,23 @@
 # Example: MyC00LName
-BOT_AUTHOR=""
+AUTHOR=""
+# You's Discord ID
+AUTHOR_DISCORD_ID=""
+
 # Example: hehe, no
 BOT_TOKEN=""
+# Example: hehe, no
+BOT_CLIENT_ID=""
 # Example: 1.0.4.6
-BOT_VERSION=""
+BOT_VERSION="1.0.4.6"
 # Example: ALPHA
-BOT_VERSION_STATUS=""
+BOT_VERSION_STATUS="ALPHA"
 
-# You's Discord ID
-AUTHOR_DISCORD_ID="827928352131252245"
+# Example: 1168636395246592081
+BOT_GUILD_ID=""
+# Example: https://discord.gg/bc68RsHwpH
+BOT_GUILD_INVITE_URL=""
+
+# Example: 1168636638981791785
+BOT_LOG_CHANNEL_ID=""
+# Example: Kristy Log: 
+BOT_LOG_PREFIX="Bot Log: "
