--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "kristytype",
   "version": "1.0.5",
   "description": "",
-  "main": "index.js",
+  "main": "Bot.ts",
   "scripts": {
     "start": "ts-node src/Bot.ts"
   },
   "author": "aculaOne",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.16.0",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
+    "ffmpeg-static": "^5.2.0",
+    "libsodium-wrappers": "^0.7.13",
     "sequelize": "^6.33.0",
     "sqlite3": "^5.1.6"
   },
