--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "types": ["node"],
     "typeRoots": ["node_modules/@types"],
     "sourceMap": false,
-    "baseUrl": ".",
+    "baseUrl": "./",
     "paths": {
       "@src": ["src"],
       "@src/*": ["src/*"]
