--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "ts-node src/Bot.ts"
   },
   "author": "aculaOne",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.16.0",
