--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,25 @@
-# Example: MyC00LName
-AUTHOR=""
+# INFORMATION ABOUT AUTHOR
+# Example: aculaOne
+AUTHOR="aculaOne"
 # You's Discord ID
-AUTHOR_DISCORD_ID=""
-
+AUTHOR_DISCORD_ID="827928352131252245"
+  
+# BOT SETTINGS | General
 # Example: hehe, no
 BOT_TOKEN=""
-# Example: hehe, no
+# Example: 1164228812217790565
 BOT_CLIENT_ID=""
-# Example: 1.0.4.11
-BOT_VERSION="1.0.4.11"
+# Example: 2.0.0
+BOT_VERSION="2.0.0"
 # Example: ALPHA
 BOT_VERSION_STATUS="ALPHA"
-
+    
+# BOT SETTINGS | Linking
 # Example: 1168636395246592081
-BOT_GUILD_ID=""
+BOT_GUILD_ID="1168636395246592081"
 # Example: https://discord.gg/bc68RsHwpH
-BOT_GUILD_INVITE_URL=""
+BOT_GUILD_INVITE_URL="https://discord.gg/bc68RsHwpH"
 
-# Example: 1168636638981791785
-BOT_LOG_CHANNEL_ID=""
-# Example: Kristy Log: 
-BOT_LOG_PREFIX="Bot Log: "
+# DATABASES
+# Example: postgresql://viokray:12345@localhost:5432/mydb?schema=public
+DATABASE_URL="postgresql://USER:PASSWORD@localhost:5432/DATABASE_NAME?schema=public"
