--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # My files
 start.bat
 prisma/migrations/**
+src/assets/activities/files/**
+!src/assets/activities/files/default
+!src/assets/activities/files/default/*
 
 # Generated files
 src/generated
