--- a/src/config.json
+++ b/src/config.json
@@ -1,12 +1,12 @@
 {
   "author": {
-    "name": "aculaOne",
-    "username": "acula_1",
+    "name": "Valentin Vird",
+    "username": "lanvalird",
     "discordId": "827928352131252245"
   },
   "bot": {
     "clientId": "1164228812217790565",
-    "version": "2.2.2",
+    "version": "2.3.0",
     "status": "alpha",
     "guild": {
       "id": "1168636395246592081",
