upd listeners methods...

--- a/src/config.json
+++ b/src/config.json
@@ -12,7 +12,7 @@
       "id": "1168636395246592081",
       "link": "https://discord.gg/bc68RsHwpH"
     },
-    "website": "https://github.com/aculaOne/KristyType"
+    "website": "https://github.com/lanvalird/KristyType"
   },
   "api": {
     "url": ""
