--- a/package.json
+++ b/package.json
@@ -1,35 +1,40 @@
 {
   "name": "kristytype",
-  "version": "2.3.2",
+  "version": "2.3.3",
   "description": "Kristy is a very simple and cute Discord bot",
   "license": "MIT",
   "private": true,
-  "type": "module",
+  "type": "commonjs",
   "author": {
     "name": "lanvalird",
     "url": "https://lanvalird.ru/"
   },
   "main": "./src/index.ts",
   "scripts": {
-    "bot:start": "tsx .",
-    "bot:dev": "tsx watch .",
+    "start": "ts-node src/index.ts",
+    "dev": "nodemon src/index.ts",
     "utils:format": "prettier . -c -w",
     "utils::migrate:acts": "ts-node src/utils/migraters/migrate-acts.ts"
   },
   "dependencies": {
     "@napi-rs/canvas": "^0.1.73",
-    "discord.js": "^14.21.0",
-    "dotenv": "^17.0.1"
+    "discord.js": "^14.21.0"
   },
   "devDependencies": {
+    "@swc/core": "^1.12.9",
+    "@swc/helpers": "^0.5.17",
     "@types/node": "^20.19.4",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
+    "dotenv": "^16.6.1",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
+    "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
+    "regenerator-runtime": "^0.14.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "tsx": "^4.20.3",
+    "tslib": "^2.8.1",
     "typescript": "^5.8.3"
   },
   "packageManager": "pnpm@10.7.0"
