--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,7 @@
   "include": ["./**/*.ts"],
   "exclude": ["node_modules", "dist"],
   "ts-node": {
+    "swc": true,
     "require": ["tsconfig-paths/register"]
   }
 }
