--- a/src/config.json
+++ b/src/config.json
@@ -1,18 +1,18 @@
 {
   "author": {
-    "name": "Valentin Vird",
+    "name": "Valentin Bird",
     "username": "lanvalird",
     "discordId": "827928352131252245"
   },
   "bot": {
     "clientId": "1164228812217790565",
-    "version": "2.3.0",
+    "version": "2.4.0",
     "status": "alpha",
     "guild": {
       "id": "1168636395246592081",
       "link": "https://discord.gg/bc68RsHwpH"
     },
-    "website": "https://github.com/lanvalird/KristyType"
+    "website": "https://lanvalird.ru/project/kristy"
   },
   "api": {
     "url": ""
